# banking-simulator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
docker/postgres/init/: 01-init-databases.sql
docs/: ARCHITECTURE.md  CUSTOM_SCENARIOS.md  INTEGRATION_GUIDE.md  SCENARIOS.md
scenarios/: fraud_attack.yaml  mule_network.yaml  normal_day.yaml  onboarding.yaml  peak_load.yaml
simulator/: __init__.py  config.py  engine.py  metrics.py  reporter.py  scenarios.py
simulator/connectors/: __init__.py  bastion.py  kafka.py  nexum.py
simulator/dashboard/: __init__.py  app.py  ws.py
simulator/dashboard/static/: app.js  index.html
simulator/generators/: __init__.py  customers.py  events.py  fraud.py  transactions.py
